Add text for character segmentation

--- a/1-ReadMe.ipynb
+++ b/1-ReadMe.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5b40e1be50>"
+       "<matplotlib.image.AxesImage at 0x7f3f08832e50>"
       ]
      },
      "execution_count": 1,
@@ -90,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5b40d344f0>"
+       "<matplotlib.image.AxesImage at 0x7f3f08748a90>"
       ]
      },
      "execution_count": 2,
@@ -140,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5b40c9a160>"
+       "<matplotlib.image.AxesImage at 0x7f3f08729d00>"
       ]
      },
      "execution_count": 3,
@@ -177,7 +177,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5b40c72250>"
+       "<matplotlib.image.AxesImage at 0x7f3f08683d00>"
       ]
      },
      "execution_count": 4,
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5b40c43b50>"
+       "<matplotlib.image.AxesImage at 0x7f3f0865d940>"
       ]
      },
      "execution_count": 5,
@@ -299,7 +299,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5b3d0df130>"
+       "<matplotlib.image.AxesImage at 0x7f3f04af6610>"
       ]
      },
      "execution_count": 7,
@@ -363,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5b3d0b2790>"
+       "<matplotlib.image.AxesImage at 0x7f3f04acc6d0>"
       ]
      },
      "execution_count": 9,
@@ -386,6 +386,17 @@
    "source": [
     "rotated_image = skew_correctness(filtered_image)\n",
     "plt.imshow(rotated_image, cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Character Segmentation**\n",
+    "Next we want to segment the given word into characters. This simple project expects input image to consist of words without modifiers like \"kamala\", we need to segment the word in \"ka\", \"ma\", \"la\".\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
